<resources>
    <string name="app_name">Fadhili</string>
    <string name="email_hint">something@example.com</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an Account</string>
    <string name="firstname">Firstname</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="lastname">Lastname</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="create_password">Create password</string>
    <string name="google">Google</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="packages">Packages</string>
    <string name="connect">Connect</string>
    <string name="profile">profile</string>
    <string name="events">Events</string>
    <string name="home">The recent escalation of drought around parts of Kenya, Isiolo and Garrisa is once again forcing families to flee their homes. They cannot access basic services, are struggling to get food, housing, healthcare and other basic essentials for their families.

            Fadhili is on the ground doing all we can to reach and protect them but we can’t do this alone.
    Fadhili is meant to reach a wider society of people who can donate to the needy.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="about">About Us</string>
    <string name="our_locations">Our Locations</string>
</resources>
