<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_feed"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_package"
        android:icon="@drawable/ic_packages"
        android:title="@string/packages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_events"
        android:title="@string/events"/>

    <item
        android:id="@+id/navigation_connect"
        android:icon="@drawable/ic_connect"
        android:title="@string/connect" />



</menu>
