<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


    <ImageView
            android:layout_width="@dimen/loginimg_width"
            android:layout_height="@dimen/loginimg_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/rsz_fadhili_logo1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_fnameSignup"
        android:hint="@string/firstname"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="@dimen/marginHorizontal"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_lnameSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/lastname"
            android:textColor="@android:color/black"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/text_emailSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColor="@android:color/black"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/text_passwordSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/create_password"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:textColor="@android:color/black"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/text_password2Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/re_enter_password"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:textColor="@android:color/black"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:textColor="@android:color/black"
            android:id="@+id/btn_signupSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />
        <Button
            android:id="@+id/btn_loginSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/login"
            android:textAlignment="center"/>


</LinearLayout>
</android.support.design.widget.CoordinatorLayout>