<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/loginimg_width"
            android:layout_height="@dimen/loginimg_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/rsz_fadhili_logo1" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/text_emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:textColor="@android:color/black"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                />
        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_passLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/enter_your_password"
                android:textColor="@android:color/black"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/btn_loginLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:text="@string/login"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

        <Button
            android:id="@+id/btn_signupLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textColor="@android:color/black"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/googleSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_txtsize"
            android:text="@string/google"
            android:textAlignment="center"
            android:textColor="@color/material_red_A700"
            android:clickable="true"
            android:onClick="instantiateUser"
            />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>